Table CSS borders have changed
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | + | fixed |
| firefox66 | + | fixed |
People
(Reporter: gd.productions, Assigned: emilio)
References
Details
(Keywords: parity-chrome, regression, testcase)
Attachments
(2 files)
|
3.50 KB,
application/x-zip-compressed
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:64.0) Gecko/20100101 Firefox/64.0
Steps to reproduce:
When you use a <table> with the "border" attribute with a value different than 0, even if it is on a non-HTML5 website, then the CSS border properties are not applied.
This only occurs in the current Nightly release (66). Something else has also been changed, when using the CSS border-bottom in the last <td> of the table, please see the attached files.
Actual results:
Please see the PNG in the attached zip.
Expected results:
Please see the PNG in the attached zip.
Comment 1•7 years ago
|
||
| regression-window | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Comment 3•7 years ago
|
||
Thank you very much for the report. Apparently our test coverage for border-collapsed tables sucks :(
Updated•7 years ago
|
| Assignee | ||
Comment 5•7 years ago
|
||
Comment on attachment 9036599 [details]
Bug 1520138 - Fix border-style conflict resolution in border-collapsed tables.
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1509717
User impact if declined: Some tables could look different.
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: No
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Simple fix that restores the previous behavior in a slightly simpler way.
String changes made/needed: none
Comment 6•7 years ago
|
||
| bugherder | ||
Comment 8•7 years ago
|
||
Comment on attachment 9036599 [details]
Bug 1520138 - Fix border-style conflict resolution in border-collapsed tables.
[Triage Comment]
Returns us to previous behavior and adds new tests to avoid future breakage. Approved for 65.0b12.
Comment 9•7 years ago
|
||
| bugherder uplift | ||
Description
•